objects/Design__c.object
<CustomObject>
  <fields>
        <fullName>California_DSA_Required__c</fullName>
        <description>#165315893</description>
        <inlineHelpText>Note! If DSA is required, choose version 1.6 or custom carport</inlineHelpText>
        <label>California DSA Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <description>#154301262 - track inverter manufacturer data</description>
        <label>Inverter Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMA - Core1</fullName>
                </value>
                <value>
                    <fullName>Delta Energy Systems</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>SMA</fullName>
                    <isActive>false</isActive>
                    <label>SMA - Tripower</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Min_clearance_height_required_is_greater__c</fullName>
        <description>#165315893</description>
        <inlineHelpText>Note! If yes, please specify minimum clearance height in Notes section</inlineHelpText>
        <label>Min clearance greater than 11ft</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>ModuleTypeandWattage__c</fullName>
        <description>Helix Design Request-Module Dropdown(s) per tab Pivotal #129894073</description>
        <label>Module Type and Wattage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HelixDesignType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SPR-P17-340-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-E20-327-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-E20-435-COM</fullName>
                    <default>true</default>
                    <label>SPR-E20-435-COM</label>
                </value>
                <value>
                    <fullName>SPR-X21-345-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-X22-360-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-P17-350-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-P17-355-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-X21-460-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-X21-470-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-P17-335-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-X20-445-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-P17-345-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-P17-360-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-P19-395-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-P19-395-COM-MLSD</fullName>
                </value>
                <value>
                    <fullName>SPR-E20-330-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-E20-330-COM-MLSD</fullName>
                </value>
                <value>
                    <fullName>SPR-X22-360-COM-MLSD</fullName>
                </value>
                <value>
                    <fullName>E20-330-COM</fullName>
                </value>
                <value>
                    <fullName>P19-395-COM</fullName>
                </value>
                <value>
                    <fullName>SPR-A440-COM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <fields>
        <fullName>Technology_System__c</fullName>
        <label>Technology System</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HelixDesignType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>G-Ground Fixed Tilt-RBI</fullName>
                </value>
                <value>
                    <fullName>G-Helix Tracker V1.0</fullName>
                </value>
                <value>
                    <fullName>G-Oasis 3CT1</fullName>
                </value>
                <value>
                    <fullName>G-Oasis 3E</fullName>
                </value>
                <value>
                    <fullName>G-Oasis 3J</fullName>
                </value>
                <value>
                    <fullName>G-Oasis 3P</fullName>
                </value>
                <value>
                    <fullName>G-Oasis C1</fullName>
                </value>
                <value>
                    <fullName>G-Oasis C1-UCM</fullName>
                </value>
                <value>
                    <fullName>G-Oasis C7</fullName>
                </value>
                <value>
                    <fullName>G-Other</fullName>
                </value>
                <value>
                    <fullName>G-T0</fullName>
                </value>
                <value>
                    <fullName>Off-Mining</fullName>
                </value>
                <value>
                    <fullName>Off-Oil&amp;Gas</fullName>
                </value>
                <value>
                    <fullName>Off-Other System</fullName>
                </value>
                <value>
                    <fullName>Off-Rural Electrification</fullName>
                </value>
                <value>
                    <fullName>Off-Telecom</fullName>
                </value>
                <value>
                    <fullName>P-Helix Carport Dual-Tilt V2.0</fullName>
                </value>
                <value>
                    <fullName>P-Helix Carport Single-Tilt V2.0</fullName>
                </value>
                <value>
                    <fullName>P-Helix Carport V1.0</fullName>
                </value>
                <value>
                    <fullName>P-Helix Carport V1.1</fullName>
                </value>
                <value>
                    <fullName>P-Helix Carport V1.5</fullName>
                </value>
                <value>
                    <fullName>P-Helix Carport V1.6</fullName>
                </value>
                <value>
                    <fullName>P-Helix Carport V2.0</fullName>
                </value>
                <value>
                    <fullName>P-Non-Helix 360D</fullName>
                </value>
                <value>
                    <fullName>P-Non-Helix 360S</fullName>
                </value>
                <value>
                    <fullName>P-Non-Helix Garage Long Span</fullName>
                </value>
                <value>
                    <fullName>P-Non-Helix Long Span 360</fullName>
                </value>
                <value>
                    <fullName>P-Other</fullName>
                </value>
                <value>
                    <fullName>P-SPWR</fullName>
                </value>
                <value>
                    <fullName>P-T0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <recordTypes>
        <fullName>Master_Permit_Package</fullName>
        <active>true</active>
        <description>New Homes: Community-level design for permitting</description>
        <label>Master Permit Package</label>
    </recordTypes>
  <recordTypes>
        <fullName>Master_Plan</fullName>
        <active>true</active>
        <description>New Homes: Community-level design for sales to the builder</description>
        <label>Master Plan</label>
    </recordTypes>
  <recordTypes>
        <fullName>Preliminary_Design</fullName>
        <active>true</active>
        <description>IPA Designs</description>
        <label>Preliminary Design</label>
    </recordTypes>
  <recordTypes>
        <fullName>Project_Design</fullName>
        <active>true</active>
        <description>Project Design/Array Layout for the Execution Phase</description>
        <label>Project Design</label>
    </recordTypes>
  <recordTypes>
        <fullName>Proposal_Design</fullName>
        <active>true</active>
        <description>Proposal Design/Array Layout for the Development Phase</description>
        <label>Proposal Design</label>
    </recordTypes>
  <recordTypes>
        <fullName>Solar_Site_Plan</fullName>
        <active>true</active>
        <description>New Homes: Community-level design for sales to the builder on a per home basis</description>
        <label>Solar Site Plan</label>
    </recordTypes>
  <recordTypes>
        <fullName>System_Only</fullName>
        <active>true</active>
        <label>System Only</label>
    </recordTypes>
</CustomObject>